manifests/k8s-dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubernetes-dashboard.cowlab.org`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
